--- a/templates/modules/header.html
+++ b/templates/modules/header.html
@@ -96,9 +96,9 @@
           @mouseleave="close()"
         >
           <div>
-            <div class="size-5 text-gray-600 hover:text-blue-600 dark:text-slate-100">
+            <div class="h-5 w-5 text-gray-600 hover:text-blue-600 dark:text-slate-100">
               <img
-                class="size-5 rounded-full"
+                class="h-5 w-5 rounded-full"
                 th:src="${currentUser.avatar ?: #theme.assets('/images/default-avatar.svg')}"
                 th:alt="${currentUser.displayName}"
               />
